--- a/Tracker/Resources/en.lproj/Localizable.strings
+++ b/Tracker/Resources/en.lproj/Localizable.strings
@@ -42,6 +42,9 @@
 "confirm_category_deletion" = "Are you sure you don't need this category?";
 "delete_question" = "Delete?";
 
+// MARK: - Statistic
+"nothing_analyze" = "There is nothing to analyze yet";
+
 // MARK: - Alerts & Errors
 "error" = "Error";
 
