--- a/Tracker/Resources/en.lproj/Localizable.strings
+++ b/Tracker/Resources/en.lproj/Localizable.strings
@@ -44,6 +44,7 @@
 
 // MARK: - Statistic
 "nothing_analyze" = "There is nothing to analyze yet";
+"nothing_found" = "Nothing found";
 
 // MARK: - Alerts & Errors
 "error" = "Error";
